# gr-apt-encoder

./: CMakeLists.txt  README.md
grc/: CMakeLists.txt  apt_doppler_simulator.block.yml  apt_doppler_simulator_sgp4.block.yml  apt_encoder.block.yml  apt_encoder_signal_strength_plot.block.yml  apt_position_visualizer.block.yml
include/gnuradio/apt_encoder/: CMakeLists.txt  api.hpp  doppler_simulator.hpp  doppler_simulator_sgp4.hpp  encoder.hpp
lib/: CMakeLists.txt  antenna_pattern.cpp  antenna_pattern.hpp  apt_format.cpp  apt_format.hpp  apt_generator.cpp  apt_generator.hpp  apt_timing.hpp  doppler_simulator.cpp  doppler_simulator.hpp  doppler_simulator_impl.cpp  doppler_simulator_impl.hpp  doppler_simulator_sgp4_impl.cpp  doppler_simulator_sgp4_impl.hpp  encoder_impl.cpp  encoder_impl.hpp  image_handler.cpp  image_handler.hpp  orbit_utils.cpp  orbit_utils.hpp  sgp4_orbit.cpp  sgp4_orbit.hpp
python/: CMakeLists.txt  __init__.py
python/apt_encoder/: apt_encoder_signal_strength_plot.py  constants.py  doppler_bind.hpp  doppler_simulator.hpp  encoder_python.cpp  position_visualizer.py
test/: CMakeLists.txt  test_sgp4_orbit.cpp
